--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,32 +2,54 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_margin="5dp"
     android:layout_width="match_parent" android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:id="@+id/LinL1"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/ivPosterImage"
         android:layout_width="90dp"
         android:layout_height="135dp"
         android:layout_marginRight="5dp"
-        android:paddingRight="5dp"
-        android:id="@+id/ivPosterImage"
+        android:padding="10dp"
         android:src="@color/Black" />
+</LinearLayout>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="268dp"
+    <LinearLayout
+        android:layout_width="274dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="Movie Title"
-        android:textAppearance="@android:style/TextAppearance.Large"
-        android:textSize="22sp" />
+        android:layout_marginLeft="8dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tvOverview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvTitle"
-        android:layout_below="@+id/tvTitle"
-        android:maxLines="3"
-        android:text="Movie Overview and Synopsis" />
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="268dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="8dp"
+            android:text="Movie Title"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tvOverview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tvTitle"
+            android:layout_below="@+id/tvTitle"
+            android:layout_marginLeft="8dp"
+            android:maxLines="3"
+            android:text="Movie Overview and Synopsis" />
+    </LinearLayout>
+
+
 
 </RelativeLayout>
